Avoid invisible text during web font load

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Figtree";
   src: url("./assets/fonts/Figtree-VariableFont_wght.ttf");
+  font-display: swap;
 }
 
 :root {
